2007-09-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-kill-thread): Allow universal prefix zero
	to mark a thread as expirable.  Add variable `hide' to handle hiding of
	thread for both the null and zero (kill/expire thread) universal prefix
	cases.

2007-09-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-store-extra-entry): Allow for nil
	extras value, so an extras entry can be deleted.
	(gnus-registry-delete-extra-entry): Use it.
	(gnus-registry-fetch-extra-flags, gnus-registry-has-extra-flag)
	(gnus-registry-store-extra-flags, gnus-registry-delete-extra-flags)
	(gnus-registry-delete-all-extra-flags): Allow for arbitrary flag symbol
	 storage through the gnus-registry, and provide an appropriate API for
	 it.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-newsgroup-maximum-articles): Move from gnus.el.
	Suggested by Leo <sdl.web@gmail.com>.

	* gnus.el: Do.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-newsgroup-maximum-articles): Rename from
	gnus-maximum-newsgroup.  Suggested by Leo <sdl.web@gmail.com>.

	* gnus-agent.el (gnus-agent-fetch-headers): Do.

	* gnus-sum.el (gnus-articles-to-read, gnus-list-of-unread-articles)
	(gnus-list-of-read-articles, gnus-sequence-of-unread-articles): Do.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmbox.el (nnmbox-request-article): Don't assume delim regexp matches
	newline.
	(nnmbox-request-accept-article): Don't change article in source buffer;
	narrow to header to use message-fetch-field rather than
	nnmail-fetch-field; use with-current-buffer instead of save-excursion.
	(nnmbox-request-replace-article): Quote lines that'll be misidentified
	as delimiters; make sure article ends with newline.
	(nnmbox-delete-mail): Correct last position of article to be deleted;
	ignore X-Gnus-Newsgroup header in article body.
	(nnmbox-save-mail): Quote lines looking like delimiters at the right